logs/dag_id=user_processing/run_id=manual__2024-12-22T18:34:06.916770+00:00/task_id=store_user/attempt=1.log
[2024-12-22T18:34:11.911+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: user_processing.store_user manual__2024-12-22T18:34:06.916770+00:00 [queued]>
[2024-12-22T18:34:11.914+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: user_processing.store_user manual__2024-12-22T18:34:06.916770+00:00 [queued]>
[2024-12-22T18:34:11.914+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2024-12-22T18:34:11.915+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2024-12-22T18:34:11.915+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2024-12-22T18:34:11.920+0000] {taskinstance.py:1300} INFO - Executing <Task(PythonOperator): store_user> on 2024-12-22 18:34:06.916770+00:00
[2024-12-22T18:34:11.922+0000] {standard_task_runner.py:55} INFO - Started process 79461 to run task
[2024-12-22T18:34:11.923+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'user_processing', 'store_user', 'manual__2024-12-22T18:34:06.916770+00:00', '--job-id', '170', '--raw', '--subdir', 'DAGS_FOLDER/user_processing.py', '--cfg-path', '/tmp/tmpq8u1550n']
[2024-12-22T18:34:11.924+0000] {standard_task_runner.py:83} INFO - Job 170: Subtask store_user
[2024-12-22T18:34:11.946+0000] {task_command.py:388} INFO - Running <TaskInstance: user_processing.store_user manual__2024-12-22T18:34:06.916770+00:00 [running]> on host 44e036a430cc
[2024-12-22T18:34:11.970+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_processing
AIRFLOW_CTX_TASK_ID=store_user
AIRFLOW_CTX_EXECUTION_DATE=2024-12-22T18:34:06.916770+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-12-22T18:34:06.916770+00:00
[2024-12-22T18:34:11.975+0000] {postgres.py:158} INFO - Running copy expert: COPY INTO user FROM stdin WITH DELIMITER AS ',', filename: /tmp/processed_user.csv
[2024-12-22T18:34:11.977+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2024-12-22T18:34:11.978+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/user_processing.py", line 40, in _store_user
    filename = f'/tmp/processed_user.csv'
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 166, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "INTO"
LINE 1: COPY INTO user FROM stdin WITH DELIMITER AS ','
             ^

[2024-12-22T18:34:11.981+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=user_processing, task_id=store_user, execution_date=20241222T183406, start_date=20241222T183411, end_date=20241222T183411
[2024-12-22T18:34:11.985+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 170 for task store_user (syntax error at or near "INTO"
LINE 1: COPY INTO user FROM stdin WITH DELIMITER AS ','
             ^
; 79461)
[2024-12-22T18:34:12.022+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2024-12-22T18:34:12.030+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
